# nifes-strucs

./: BRIEF.md  ENTREVISTA-TEMA.md  Opensees-M5.md  PRD.md  RESUMEN-EJECUTIVO.md  RETOMAR.md  Strux.code-workspace  feature_list_v1.json
backend/: README.md  mypy.ini  ruff.toml
frontend/: index.html
strux/backend/: pyproject.toml
strux/backend/src/data/materials/: steel_astm.json
strux/backend/src/paz/: __init__.py  app.py
strux/backend/src/paz/application/: __init__.py
strux/backend/src/paz/application/commands/: __init__.py  frame_commands.py  node_commands.py
strux/backend/src/paz/application/services/: __init__.py  undo_redo_service.py
strux/backend/src/paz/core/: exceptions.py  grid_config.py  platform.py  units.py
strux/backend/src/paz/domain/loads/: distributed_load.py  load_combination.py
strux/backend/src/paz/domain/materials/: material.py
strux/backend/src/paz/domain/model/: __init__.py  frame.py  project.py  structural_model.py
strux/backend/src/paz/domain/results/: __init__.py  analysis_results.py  frame_results.py  nodal_results.py
strux/backend/src/paz/domain/sections/: angle_section.py  circular_section.py  i_section.py  parametric.py  section.py  section_designer.py
strux/backend/src/paz/domain/validation/: __init__.py
strux/backend/src/paz/infrastructure/: __init__.py
strux/backend/src/paz/infrastructure/engines/: analysis_engine.py  opensees_adapter.py  results_parser.py  tcl_writer.py
strux/backend/src/paz/infrastructure/exporters/: __init__.py  csv_exporter.py
strux/backend/src/paz/infrastructure/importers/: __init__.py  dxf_importer.py
strux/backend/src/paz/infrastructure/repositories/: __init__.py  materials_repository.py
strux/backend/src/paz/presentation/: main_window.py
strux/backend/src/paz/presentation/panels/: results_panel.py
strux/backend/src/paz/presentation/viewport/: __init__.py  extruded_renderer.py  force_diagrams.py  grid_layer.py  viewport_widget.py
strux/backend/src/paz/presentation/widgets/: __init__.py  color_scale.py
strux/backend/tests/: __init__.py  conftest.py
strux/backend/tests/unit/application/: test_node_commands.py
strux/backend/tests/unit/core/: test_platform.py  test_units.py
strux/backend/tests/unit/domain/: __init__.py  test_project.py  test_section_designer.py  test_structural_model.py
strux/backend/tests/unit/infrastructure/: test_csv_exporter.py  test_csv_importer.py  test_file_repository.py  test_materials_repository.py  test_sections_repository.py
strux/backend/tests/unit/presentation/: test_grid_layer.py  test_viewport_widget.py
(+122 files in other folders)
