[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paz"
version = "1.0.0a1"
description = "Software Profesional de Análisis Estructural"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Pablo", email = "pablo@paz.dev" },
    { name = "Kevin", email = "kevin@paz.dev" },
]
keywords = ["structural", "analysis", "engineering", "opensees", "civil"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "numpy>=1.24.0",
    "openseespy>=3.5.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.24.0",
    "orjson>=3.9.0",
    "aiofiles>=23.0.0",
    "pyvista>=0.42.0",
    "pyvistaqt>=0.11.0",
    "PySide6>=6.5.0",
    "ezdxf>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.82.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
    "pre-commit>=3.4.0",
    "httpx>=0.24.0",
]

[project.scripts]
paz = "paz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle - too strict for now
    "ANN101",  # Missing type for self
    "ANN102",  # Missing type for cls
    "TC001",   # Move import into type-checking block (optimization only)
    "TC002",   # Move import into type-checking block (optimization only)
    "TC003",   # Move import into type-checking block (optimization only)
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit concat (conflicts with formatter)
]

[tool.coverage.run]
source = ["src/paz"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
